plugins {
	id 'org.springframework.boot' version '2.5.6'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}
ext {
	set('springCloudVersion', "2020.0.4")
}

subprojects {

	group = 'com.example'
	version = '0.0.1-SNAPSHOT'

	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'java-library'


	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	repositories {
		mavenCentral()
	}

	compileJava {
		sourceCompatibility = 16
		targetCompatibility = 16
	}

	test {
		useJUnitPlatform()
	}
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'java-library'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}
bootJar {
	enabled = false
}

jar {
	enabled = true
}
repositories {
	mavenCentral()
}

compileJava {
	sourceCompatibility = 16
	targetCompatibility = 16
}

test {
	useJUnitPlatform()
}
dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.6'
	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.5.6'
	compileOnly 'org.projectlombok:lombok:1.18.22'
	runtimeOnly 'com.h2database:h2:1.4.200'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
	testImplementation 'io.projectreactor:reactor-test:3.4.12'
	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner:3.0.4'
	testImplementation 'org.hamcrest:hamcrest:2.2'
	// Required for MockMvc autoconfigure
	testImplementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
}

